# kzfund

./: .cursorrules  .flake8  .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  app.py  config.py  mypy.ini  pyproject.toml  requirements.txt  start.sh  test.py
backend/: __init__.py
backend/api/: account.py  fund.py  portfolio.py  task.py
backend/apis/: account.py  common.py  fund.py  portfolio.py  runtime.py  task.py
components/: fund_code_aio.py  header.py  sidebar.py
data_source/: __init__.py  data_source_factory.py  factory.py  interface.py  proxy.py
data_source/implementations/: eastmoney.py  simple.py
migrations/: migrate.py  schema_versions.py  version_manager.py
models/: account.py  base.py  database.py  fund.py  fund_user.py  task.py
pages/: account.py  home.py  task.py  transaction.py
pages/account/: __init__.py  account_modal.py  delete_modal.py  page.py  portfolio_modal.py  table.py  utils.py
pages/home/: __init__.py  callbacks.py  charts.py  home_overview.py  home_page.py  overview.py  page.py  utils.py
pages/task/: __init__.py  detail_modal.py  modal.py  page.py  table.py  task_detail.py  task_modal.py  task_page.py  task_table.py  task_utils.py  utils.py
scheduler/: __init__.py  job_manager.py  jobs.py
task/: data_sync.py  fund_detail.py  fund_info.py  fund_nav.py  portfolio.py  sync_fund_nav.py  sync_fund_page.py  task_config.py  task_init.py
tests/: test_data_source.py  test_datetime.py  test_tasks.py
utils/: datetime.py  datetime_helper.py  fac_helper.py  response.py  singleton.py  string_helper.py
(+19 files in other folders)
